# OpenLedger

./: .dockerignore  .env.example  .gitignore  .privacy-guard-ignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  SECURITY.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  run.sh
.githooks/: pre-commit
config/: card_aliases.example.json  card_aliases.json  classifier.json  classifier.sample.json
docker/: Caddyfile  entrypoint.sh
docs/: architecture.md  cli.md  lsp.md  parser-scaffold.md  strategy.zh-CN.md
openledger/: __init__.py  capabilities.py  config.py  files.py  logger.py  profile_review.py  profiles.py  server.py  settings.py  stage_contracts.py  state.py  workflow.py
scripts/: README.md  _common.py  batch_ignore_review_before_date.py  build_unified_output.py  classify_unified_openrouter.mjs  extract_payment_exports.py  extract_pdf_transactions.py  finalize_classification.py  match_bank_statement_details.py  match_credit_card_details.py  probe_inputs.py  probe_pdf.py
stages/: README.md  __init__.py  _common.py  build_unified.py  classify_llm.mjs  classify_openrouter.mjs  extract_exports.py  extract_pdf.py  finalize.py  match_bank.py  match_credit_card.py
tests/: test_api_v2_contract.py  test_build_unified_dedup.py  test_build_unified_golden.py  test_capabilities.py  test_config.py  test_files.py  test_finalize_auto_dedup.py  test_match_bank_card_alias.py  test_match_bank_golden.py  test_match_credit_card_golden.py  test_pdf_parsers.py  test_pdf_parsers_golden.py  (+5 more)
(+138 files in other folders)
